# opencv-webcam

./: CMakeLists.txt  README.md  main.cpp
assets/shaders/webcamstream/: shader.frag  shader.vert
include/: ImageEffects.h  Logger.h  LoggerInit.h  MainWindow.h  Shader.h  WebcamCapture.h  WebcamOutput.h  utility.h
src/: ImageEffects.cpp  Logger.cpp  MainWindow.cpp  Shader.cpp  WebcamCapture.cpp  WebcamOutput.cpp  main.cpp  utility.cpp
